[project]
name = "reddit-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.3",
    "python-dotenv>=1.1.0",
    "redditwarp>=1.3.0",
]

[project.scripts]
mcp-reddit = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server"] 